--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <body class="debug true">
         <main></main>
 
-        <footer></footer>
+        <footer>
+            <div class="row flex">
+                <div class="my-row1-6"></div>
+                <div class="my-row2-3"></div>
+                <div class="my-row1-6"></div>
+            </div>
+        </footer>
     </body>
 </html>
