--- a/index.html
+++ b/index.html
@@ -13,9 +13,26 @@
 
         <footer>
             <div class="row flex">
-                <div class="my-row1-6"></div>
-                <div class="my-row2-3"></div>
-                <div class="my-row1-6"></div>
+                <div class="my-row1-6">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </div>
+                <div class="my-row2-3">
+                    <ul>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+                <div class="my-row1-6">
+                    <div class="quit-button">End Meeting</div>
+                </div>
             </div>
         </footer>
     </body>
