--- a/index.html
+++ b/index.html
@@ -13,20 +13,140 @@
         <!--  -->
     </head>
     <body class="debug true">
-        <main>
-            <div class="container">
+        <main class="relative">
+            <div class="video-container">
                 <div class="row flex">
                     <div class="profile relative">
                         <div class="username">
                             <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                         </div>
                     </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
                 </div>
+                <div class="video-settings flex">
+                    <a href=""><div class="button"><i class="fa-solid fa-grip"></i> Speaker View</div></a>
+                    <a href=""><div class="button"><i class="fa-solid fa-maximize"></i></div></a>
+                </div>
+                
             </div>
         </main>
 
         <footer>
-            <div class="row flex">
+            <!-- <div class="row flex">
                 <div class="my-row1-6">
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
@@ -47,7 +167,7 @@
                 <div class="my-row1-6">
                     <div class="quit-button">End Meeting</div>
                 </div>
-            </div>
+            </div> -->
         </footer>
     </body>
 </html>
