--- a/index.html
+++ b/index.html
@@ -136,6 +136,26 @@
                             <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                         </div>
                     </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
+                    <div class="profile relative">
+                        <div class="username">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+                    </div>
                 </div>
                 <div class="video-settings flex">
                     <a href=""><div class="button"><i class="fa-solid fa-grip"></i> Speaker View</div></a>
