--- a/index.html
+++ b/index.html
@@ -166,28 +166,74 @@
         </main>
 
         <footer>
-            <!-- <div class="row flex">
+            <div class="row flex">
                 <div class="my-row1-6">
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <ul class="flex">
+                        <li><a href="">dwadwa</a></li>
+                        <li><a href="">dwadwa</a></li>
+                    </ul>
                 </div>
                 <div class="my-row2-3">
-                    <ul>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                    <ul class="flex">
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-user-plus"></i>
+                                <p>Invite</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-users"></i>
+                                <p>Manage Partecipants</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-chart-column"></i>
+                                <p>Polling</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-share-from-square green"></i>
+                                <p>Share Screen</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-angle-up small"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-comment"></i>
+                                <p>Chat</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-record-vinyl"></i>
+                                <p>Record</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-border-all"></i>
+                                <p>Breakout Rooms</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-ellipsis"></i>
+                                <p>More</p>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="my-row1-6">
                     <div class="quit-button">End Meeting</div>
                 </div>
-            </div> -->
+            </div>
         </footer>
     </body>
 </html>
