--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!--  -->
     </head>
-    <body class="debug true">
+    <body class="debug false">
         <main class="relative">
             <div class="video-container">
                 <div class="row flex">
@@ -230,8 +230,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="my-row1-6">
-                    <div class="quit-button">End Meeting</div>
+                <div class="my-row1-6 relative">
+                    <a href=""><div class="quit-button">End Meeting</div></a>
                 </div>
             </div>
         </footer>
