footer last section

--- a/index.html
+++ b/index.html
@@ -169,8 +169,17 @@
             <div class="row flex">
                 <div class="my-row1-6">
                     <ul class="flex">
-                        <li><a href="">dwadwa</a></li>
-                        <li><a href="">dwadwa</a></li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-microphone"></i> <i class="fa-solid fa-angle-up small"></i>
+                                <p class="relative">Mute</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=""><i class="fa-solid fa-video"></i> <i class="fa-solid fa-angle-up small"></i>
+                            <p>Stop Video</p>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="my-row2-3">
