--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <!--  -->
     </head>
     <body class="debug false">
+
+        <!-- Propic Zone -->
         <main class="relative">
             <div class="video-container">
                 <div class="row flex">
@@ -165,7 +167,10 @@
             </div>
         </main>
 
+        <!-- Footer (Buttons Bar) -->
         <footer>
+
+            <!-- First Button Section -->
             <div class="row flex">
                 <div class="my-row1-6">
                     <ul class="flex">
@@ -182,6 +187,7 @@
                         </li>
                     </ul>
                 </div>
+                <!-- Big Button Section -->
                 <div class="my-row2-3">
                     <ul class="flex">
                         <li>
@@ -239,6 +245,8 @@
                         </li>
                     </ul>
                 </div>
+
+                <!-- Quit Button -->
                 <div class="my-row1-6 relative">
                     <a href=""><div class="quit-button">End Meeting</div></a>
                 </div>
